CI: add flake8 linter check

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,18 @@ skip_missing_interpreters = true
 extras = tests
 commands = pytest {posargs}
 
+[testenv:lint]
+deps = flake8
+commands = flake8
+
+[flake8]
+max-line-length = 120
+select = C,E,F,W,B,B950
+ignore = E203, E231, E501, W503
+per-file-ignores =
+    tests/*: F811, F401
+exclude = .git,.tox,.eggs,doc
+
 [pytest]
 addopts = --verbose
 testpaths = tests
