CI: add python 3.9 image and tests on python 3.9

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,29 @@
-image: registry.nic.cz/turris/turrishw/python3.7
 before_script:
     - pip install tox
 
 stages:
   - test
 
-python3:
+.python3.7_image: &py37
+  image: registry.nic.cz/turris/turrishw/python3.7
+
+.python3.9_image: &py39
+  image: registry.nic.cz/turris/turrishw/python3.9
+
+lint:
+  <<: *py37
+  stage: test
+  script:
+    - tox -e lint
+
+python3.7:
+  <<: *py37
   stage: test
   script:
     - tox -e py37
 
-lint:
+python3.9:
+  <<: *py39
   stage: test
   script:
-    - tox -e lint
+    - tox -e py39
