CI: update tox.ini for tox >=4.0

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,18 @@
-# tox (https://tox.readthedocs.io/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = py{37,38,39},lint
+requires =
+    tox>=4
+env_list = py{37,38,39},lint
 skip_missing_interpreters = true
 
 [testenv]
+description = run the tests with pytest
+package = wheel
+wheel_build_env = .pkg
 extras = tests
-commands = pytest {posargs}
+commands = pytest {tty:--color=yes} {posargs}
 
 [testenv:lint]
+description = Linter check with flake8
 deps = flake8
 commands = flake8
 
