--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,11 @@
-before_script:
-    - pip install tox
-
 stages:
+  - lint
   - test
+  - build
+  - publish
 
-.python_image: &py3
-  image: registry.nic.cz/turris/foris-ci/python3
-
-lint:
-  <<: *py3
-  stage: test
-  script:
-    - tox -q -e lint
-
-python3.10:
-  <<: *py3
-  stage: test
-  script:
-    - tox -q -e py310
+include:
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/base.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/linters.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/tox.yml"
+  - remote: "https://gitlab.nic.cz/turris/foris-controller/packages/-/raw/master/templates/python/build_and_publish.yml"
